--- a/src/templates/c8-basic-content.twig
+++ b/src/templates/c8-basic-content.twig
@@ -125,12 +125,7 @@
   </div>
 
   {# G3 image paragraph #}
-  <figure class="media media--image">
-    <picture>
-      <img src="//placehold.it/1280x720" alt="">
-    </picture>
-    <figcaption class="media__caption">Caption text here</figcaption>
-  </figure>
+  {% include 'paragraphs/image.twig' %}
 
   {#G2 two column text. May change later to a component name like two-col-text #}
   <div class="row row--dividers mb-6">
