--- a/src/templates/paragraphs/related-stories.twig
+++ b/src/templates/paragraphs/related-stories.twig
@@ -16,6 +16,7 @@
 
               {% include 'partials/card.twig' with {
                 tags: tags,
+                image_sizes: image_sizes,
                 title: 'Sustainable Agriculture in the Sacred Valley',
                 text: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam asperiores consectetur, voluptate, officiis nisi magni quasi reprehenderit.'
               } %}
