--- a/src/templates/partials/speaker.twig
+++ b/src/templates/partials/speaker.twig
@@ -1,6 +1,6 @@
 <div class="speaker">
   <a href="#">
-    <img src="//placehold.it/116x161" alt="" class="speaker__photo">
+    {% include 'partials/picture.twig' with { name: 'speaker' } %}
   </a>
   <h3 class="speaker__name"><a href="#">Michael Green</a></h3>
   <div class="speaker__content">
