--- a/src/templates/t04-faculty-in-the-field.twig
+++ b/src/templates/t04-faculty-in-the-field.twig
@@ -18,7 +18,9 @@
 
   <div class="container">
     {% include 'paragraphs/faculty-spotlight.twig' with {
-      faculty_spotlight: faculty_spotlight
+      faculty_spotlight: faculty_spotlight,
+      image_sizes: image_sizes,
+      breakpoints: breakpoints,
     } %}
   </div>
 
