--- a/src/templates/t10-story.twig
+++ b/src/templates/t10-story.twig
@@ -30,7 +30,7 @@
       <div class="col-md-push-1 col-md-9">
 
         <div class="story-detail__image">
-          {% include 'paragraphs/image.twig' %}
+          {% include 'partials/picture.twig' with { name: 'story_detail' } %}
         </div>
 
         <div class="story-detail__body">
