--- a/src/templates/paragraphs/image.twig
+++ b/src/templates/paragraphs/image.twig
@@ -1,6 +1,6 @@
-<figure class="media media--image">
-  <picture>
-    <img src="//placehold.it/1280x720" alt="">
-  </picture>
-  <figcaption class="media__caption">Caption text here</figcaption>
-</figure>
+<div class="mb-6">
+  <figure class="media media--image">
+    {% include 'partials/picture.twig' with { name: 'image' } %}
+    <figcaption class="media__caption">Caption text here</figcaption>
+  </figure>
+</div>
