--- a/src/templates/partials/grid-nav.twig
+++ b/src/templates/partials/grid-nav.twig
@@ -7,12 +7,7 @@
       <li class="grid-nav__item">
         <figure class="grid-nav__image">
           <a href="">
-            <picture>
-              <source srcset="//placehold.it/320x180" media="(min-width: 960px)" />
-              <source srcset="//placehold.it/160x90" media="(min-width: 580px)" />
-              <source srcset="//placehold.it/80x45" />
-              <img src="//placehold.it/256x144" alt="" />
-            </picture>
+            {% include 'partials/picture.twig' with { name: 'grid_nav' } %}
           </a>
         </figure>
         <div class="grid-nav__body">
