--- a/src/scss/base/_grid.scss
+++ b/src/scss/base/_grid.scss
@@ -7,8 +7,8 @@
 }
 
 .row--no-gutters {
-  margin-left: 0;
-  margin-right: 0;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
 
   > [class^='col'] {
     padding-right: 0;
