--- a/src/templates/paragraphs/related-stories.twig
+++ b/src/templates/paragraphs/related-stories.twig
@@ -1,5 +1,6 @@
 {% embed 'partials/section.twig' with {
   title: 'Related Stories',
+  labelledby: 'midd-related-stories',
   moreLinkText: 'View all',
   moreLinkHref: '#'
 } %}
