--- a/src/templates/partials/homepage-hero.twig
+++ b/src/templates/partials/homepage-hero.twig
@@ -1,6 +1,6 @@
 <article class="homepage-hero">
   <figure class="homepage-hero__media">
-    {% include 'partials/picture.twig' with { name: 'homepage_hero' } %}
+    <img srcset="http://placehold.it/1040x768" >
   </figure>
   <section class="homepage-hero__content">
     <div class="homepage-hero__body">
