--- a/src/templates/t10-story.twig
+++ b/src/templates/t10-story.twig
@@ -30,14 +30,14 @@
       <div class="col-md-push-1 col-md-9">
 
         <div class="story-detail__image">
-          {% include 'partials/picture.twig' with { name: 'story_detail' } %}
+          <img src="http://placehold.it/1280x720" srcset="http://placehold.it/400x225 400w, http://placehold.it/640x360 640w, http://placehold.it/1280x720 1280w" sizes="100vw" alt="" width="1280" height="720">
         </div>
 
         <div class="story-detail__body">
 
           {% include 'paragraphs/text.twig' %}
 
-          {% include 'paragraphs/slideshow.twig' %}
+          {# {% include 'paragraphs/slideshow.twig' %} #}
 
           {% include 'paragraphs/text.twig' %}
 
@@ -45,7 +45,7 @@
 
           {% include 'paragraphs/text.twig' %}
 
-          {% include 'paragraphs/video.twig' %}
+          {# {% include 'paragraphs/video.twig' %} #}
 
         </div>
 
