use srcset for responsive images instead of picture where possible

--- a/src/templates/paragraphs/video.twig
+++ b/src/templates/paragraphs/video.twig
@@ -2,7 +2,7 @@
 <figure class="video js-video" data-video='<iframe src="https://player.vimeo.com/video/221201240" width="400" height="225" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>'>
   <div class="video__content js-video-content">
     <a href="https://player.vimeo.com/video/221201240" class="video__link js-video-link">
-      {% include 'partials/picture.twig' with { name: 'video' } %}
+      {% include 'partials/img.twig' with { name: 'video' } %}
       <span class="button button--primary video__button">
         Play
         <span class="button__icon">
