--- a/src/templates/partials/card.twig
+++ b/src/templates/partials/card.twig
@@ -2,7 +2,7 @@
   {% if image %}
     <div class="card__media">
       <a href={{href}}>
-        {% include 'partials/picture.twig' with { name: 'card' } %}
+        {% include 'partials/img.twig' with { name: 'card' } %}
       </a>
     </div>
   <div class="card__body">
