--- a/src/templates/partials/event-teaser.twig
+++ b/src/templates/partials/event-teaser.twig
@@ -2,7 +2,7 @@
   <div class="event-teaser__media">
     <a href="{{url}}">
       <figure class="media media-image view-mode-teaser">
-        {% include 'partials/picture.twig' with { name: 'teaser' } %}
+        {% include 'partials/img.twig' with { name: 'teaser' } %}
       </figure>
     </a>
   </div>
