--- a/src/templates/partials/grid-nav.twig
+++ b/src/templates/partials/grid-nav.twig
@@ -7,7 +7,7 @@
       <li class="grid-nav__item">
         <figure class="grid-nav__image">
           <a href="">
-            {% include 'partials/picture.twig' with { name: 'grid_nav' } %}
+            {% include 'partials/img.twig' with { name: 'grid_nav' } %}
           </a>
         </figure>
         <div class="grid-nav__body">
