--- a/src/templates/partials/profile-spotlight-item.twig
+++ b/src/templates/partials/profile-spotlight-item.twig
@@ -1,7 +1,7 @@
 <article class="profile-spotlight-item">
   <figure class="profile-spotlight-item__media">
     <a href="#">
-      {% include 'partials/picture.twig' with {
+      {% include 'partials/img.twig' with {
         name: 'profile_spotlight_item'
       } %}
     </a>
