--- a/src/templates/partials/profile-teaser.twig
+++ b/src/templates/partials/profile-teaser.twig
@@ -1,7 +1,7 @@
 <div class="profile-teaser">
   <div class="profile-teaser__media">
     <a href="#">
-      {% include 'partials/picture.twig' with {
+      {% include 'partials/img.twig' with {
         name: 'profile_teaser'
       } %}
     </a>
