--- a/src/templates/partials/program-panel.twig
+++ b/src/templates/partials/program-panel.twig
@@ -1,7 +1,7 @@
 <figure class="program-panel">
   <div class="program-panel__media">
 
-    {% include 'partials/picture.twig' with { name: 'panel' } %}
+    {% include 'partials/img.twig' with { name: 'panel' } %}
 
   </div>
   <figcaption class="program-panel__content">
