--- a/src/templates/t05-faculty-profile.twig
+++ b/src/templates/t05-faculty-profile.twig
@@ -25,7 +25,7 @@
               <div class="row">
 
                 <div class="profile-detail__photo">
-                  {% include 'partials/picture.twig' with {
+                  {% include 'partials/img.twig' with {
                     name: 'profile_detail'
                   } %}
                 </div>
