--- a/src/templates/partials/page-hero.twig
+++ b/src/templates/partials/page-hero.twig
@@ -7,7 +7,7 @@
         <div class="row">
           <div class="page-hero__media">
             <figure>
-              {% include 'partials/picture.twig' with { name: 'page_hero' } %}
+              {% include 'partials/img.twig' with { name: 'page_hero' } %}
               <figcaption class="media__caption">Some caption for the page hero image</figcaption>
             </figure>
           </div>
