--- a/src/templates/partials/teaser.twig
+++ b/src/templates/partials/teaser.twig
@@ -1,7 +1,7 @@
 <article class="teaser">
   <figure class="teaser__media">
     <a href="#">
-      {% include 'partials/picture.twig' with { name: 'teaser' } %}
+      {% include 'partials/img.twig' with { name: 'teaser' } %}
     </a>
   </figure>
   <div class="teaser__body">
