--- a/src/templates/t12-areas-of-focus.twig
+++ b/src/templates/t12-areas-of-focus.twig
@@ -8,7 +8,7 @@
 
   <div class="mb-6 text-right">
     <figure>
-      {% include 'partials/picture.twig' with { name: 'top_level' } %}
+      {% include 'partials/img.twig' with { name: 'top_level' } %}
       <figcaption class="media__caption">some caption for the image</figcaption>
     </figure>
   </div>
