--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -107,3 +107,8 @@
 .h-100 {
   height: 100%;
 }
+
+// TODO: need to change frontend to use this class or figure out admin panel only styles
+.visually-hidden {
+  @include sr-only;
+}
