add bottom margin to image Paragraphs

--- a/src/templates/paragraphs/image.twig
+++ b/src/templates/paragraphs/image.twig
@@ -1,4 +1,4 @@
-<figure class="media media--image">
+<figure class="media media--image mb-4">
   <picture>
     <img src="//placehold.it/1280x720" alt="">
   </picture>
