--- a/src/templates/c8-basic-content.twig
+++ b/src/templates/c8-basic-content.twig
@@ -55,6 +55,10 @@
 
 {% block layout_content %}
 
+  <figure class="mb-4">
+    <img src="http://placehold.it/1280x720" alt="">
+  </figure>
+
   <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur commodi, excepturi necessitatibus, quibusdam beatae libero est modi aliquam aspernatur provident quod voluptate dolor non hic, eveniet dolorem assumenda tenetur error.</p>
 
   {# G1 text paragraph #}
