remove setting svg fill color since they have currentColor set in fb3a597

--- a/src/scss/components/_list.scss
+++ b/src/scss/components/_list.scss
@@ -38,10 +38,7 @@
   margin-right: 10px;
   position: relative;
   top: 5px;
-
-  svg {
-    fill: $bright-green;
-  }
+  color: $bright-green;
 }
 
 .list--unordered {
