--- a/src/scss/components/_share.scss
+++ b/src/scss/components/_share.scss
@@ -16,15 +16,11 @@
 }
 
 .share__link {
-  svg {
-    fill: $bright-green;
-    transition: .2s;
-  }
+  color: $bright-green;
+  transition: 0.2s;
 
   &:hover,
   &:focus {
-    svg {
-      fill: $middlebury-blue;
-    }
+    color: $middlebury-blue;
   }
 }
