--- a/src/scss/components/_social-links.scss
+++ b/src/scss/components/_social-links.scss
@@ -12,7 +12,7 @@
 .social-links__link {
   display: inline-block;
   color: $white;
-  transition: .2s;
+  transition: 0.2s;
 
   &:hover,
   &:focus {
@@ -20,17 +20,10 @@
       opacity: 0.5;
     }
 
-    svg {
-      fill: $middlebury-blue;
-    }
+    color: $middlebury-blue;
   }
 
-  svg {
-    fill: $bright-green;
-    transition: .2s;
-
-    .social-links--light & {
-      fill: $white;
-    }
+  .social-links--light & {
+    color: $white;
   }
 }
