use img dimensions from yaml data

--- a/src/templates/partials/homepage-hero.twig
+++ b/src/templates/partials/homepage-hero.twig
@@ -1,6 +1,6 @@
 <article class="homepage-hero">
   <figure class="homepage-hero__media">
-    <img srcset="http://placehold.it/1040x768" >
+    {% include 'partials/img.twig' with { name: 'homepage_hero' } %}
   </figure>
   <section class="homepage-hero__content">
     <div class="homepage-hero__body">
