--- a/src/templates/t10-story.twig
+++ b/src/templates/t10-story.twig
@@ -30,7 +30,7 @@
       <div class="col-md-push-1 col-md-9">
 
         <div class="story-detail__image">
-          <img src="http://placehold.it/1280x720" srcset="http://placehold.it/400x225 400w, http://placehold.it/640x360 640w, http://placehold.it/1280x720 1280w" sizes="100vw" alt="" width="1280" height="720">
+          {% include 'partials/img.twig' with { name: 'story_detail' } %}
         </div>
 
         <div class="story-detail__body">
