use img tag since image is not responsive

--- a/src/templates/partials/speaker.twig
+++ b/src/templates/partials/speaker.twig
@@ -1,6 +1,6 @@
 <div class="speaker">
   <a href="#">
-    {% include 'partials/picture.twig' with { name: 'speaker' } %}
+    <img src="//placehold.it/144x192" alt="" />
   </a>
   <h3 class="speaker__name"><a href="#">Michael Green</a></h3>
   <div class="speaker__content">
