--- a/src/templates/partials/speaker.twig
+++ b/src/templates/partials/speaker.twig
@@ -2,7 +2,7 @@
   <div class="speaker__photo">
     <a href="#">
       <figure>
-        <img src="//placehold.it/116x161" alt="">
+        <img src="//placehold.it/144x192" alt="" />
       </figure>
     </a>
   </div>
