--- a/src/templates/t10-story.twig
+++ b/src/templates/t10-story.twig
@@ -30,14 +30,14 @@
       <div class="col-md-push-1 col-md-9">
 
         <div class="story-detail__image">
-          {% include 'paragraphs/image.twig' %}
+          {% include 'partials/img.twig' with { name: 'story_detail' } %}
         </div>
 
         <div class="story-detail__body">
 
           {% include 'paragraphs/text.twig' %}
 
-          {% include 'paragraphs/slideshow.twig' %}
+          {# {% include 'paragraphs/slideshow.twig' %} #}
 
           {% include 'paragraphs/text.twig' %}
 
@@ -45,7 +45,7 @@
 
           {% include 'paragraphs/text.twig' %}
 
-          {% include 'paragraphs/video.twig' %}
+          {# {% include 'paragraphs/video.twig' %} #}
 
         </div>
 
