dedupe image sizes that use the same dimensions

--- a/src/templates/partials/story-teaser.twig
+++ b/src/templates/partials/story-teaser.twig
@@ -3,7 +3,7 @@
     <a href="{{url}}">
       <figure class="media media-image view-mode-teaser">
         {% if featured %}
-          {% include 'partials/img.twig' with { name: 'teaser_featured' } %}
+          {% include 'partials/img.twig' with { name: 'featured' } %}
         {% else %}
           {% include 'partials/img.twig' with { name: 'teaser' } %}
         {% endif %}
