--- a/src/templates/t08-event-detail.twig
+++ b/src/templates/t08-event-detail.twig
@@ -31,7 +31,7 @@
 
             <div class="event-detail__media">
               <figure>
-                {% include 'partials/img.twig' with { name: 'event_detail' } %}
+                {% include 'partials/img.twig' with { name: 'featured' } %}
                 <figcaption class="media__caption">
                   This is a caption for this image.
                   <span class="media__credit">Credit</span>
