--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -10,7 +10,7 @@
   text-decoration: none;
 
   &:hover {
-    border-bottom: 0;
+    border-bottom-color: transparent;
     text-decoration: none;
   }
 }
