simplify page-callout markup

--- a/src/scss/components/_page-callout.scss
+++ b/src/scss/components/_page-callout.scss
@@ -7,7 +7,7 @@
   }
 }
 
-.page-callout__content {
+.page-callout__text {
   flex: 1;
   border-right: 1px solid #0bab92;
   align-items: center;
@@ -20,10 +20,12 @@
   }
 }
 
-.page-callout__action {
-}
-
 .page-callout__button {
-  // flex: 0 1 auto;
-}
+  flex: 0 1 auto;
+  display: flex;
+  align-items: center;
 
+  @include media(md) {
+    height: 100%;
+  }
+}
