rename font weight variable for clarity

--- a/src/scss/components/_mission-modal.scss
+++ b/src/scss/components/_mission-modal.scss
@@ -6,7 +6,7 @@
   font-style: italic;
   font-size: 20px;
   font-family: $font-family-serif;
-  font-weight: $font-weight-book;
+  font-weight: $font-weight-normal;
   margin-bottom: 0;
 }
 
