--- a/src/scss/components/_panel.scss
+++ b/src/scss/components/_panel.scss
@@ -70,7 +70,7 @@
   letter-spacing: 0.04em;
   font-family: $font-family-sans-serif;
   line-height: 1;
-  font-weight: $font-weight-book;
+  font-weight: $font-weight-normal;
   margin-bottom: 10px;
 
   @include media(sm) {
