--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -59,7 +59,7 @@ fieldset {
   font-family: $font-family-serif;
   // font-size: 16px;
   // line-height: 28px;
-  // font-weight: $font-weight-book;
+  // font-weight: $font-weight-normal;
   margin: 0;
   // margin-bottom: 20px;
 }
