--- a/src/scss/components/_callout.scss
+++ b/src/scss/components/_callout.scss
@@ -49,7 +49,7 @@
 
 .callout__title {
   font-size: 40px;
-  font-weight: $font-weight-book;
+  font-weight: $font-weight-normal;
   font-family: $font-family-serif;
   line-height: 1.3;
   margin-bottom: 0;
