--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -73,7 +73,7 @@ $font-family-sans-serif: 'whitney ssm a', 'whitney ssm b', Tahoma, Geneva, sans-
 $font-family-serif: 'sentinel ssm a', 'sentinel ssm b', georgia, serif;
 
 $font-weight-light: 300;
-$font-weight-book: 400;
+$font-weight-normal: 400;
 $font-weight-medium: 500;
 $font-weight-semibold: 600;
 $font-weight-bold: 700;
