use border-color variable in places line-gray is only used for border so all are controlled in one variable
line gray should be renamed to be a gray scale name so this is in effort of that

--- a/src/scss/base/_table.scss
+++ b/src/scss/base/_table.scss
@@ -3,7 +3,7 @@
 // .table,
 .typography table {
   width: 100%;
-  border-top: 5px solid $line-gray;
+  border-top: 5px solid $border-color;
   margin-bottom: 1rem;
 
   @include media(md) {
@@ -16,7 +16,7 @@
 
   th {
     display: none;
-    border-bottom: 5px solid $line-gray;
+    border-bottom: 5px solid $border-color;
     font-size: 14px;
     font-weight: $font-weight-semibold;
     text-align: left;
@@ -37,11 +37,11 @@
     &:not(:last-of-type) {
       td {
         &:last-of-type {
-          border-bottom: 1px solid $line-gray;
+          border-bottom: 1px solid $border-color;
         }
 
         @include media(md) {
-          border-bottom: 1px solid $line-gray;
+          border-bottom: 1px solid $border-color;
         }
       }
     }
