--- a/src/scss/components/_callout-links.scss
+++ b/src/scss/components/_callout-links.scss
@@ -1,5 +1,5 @@
 .callout-links {
-  border-bottom: 5px solid $line-gray;
+  border-bottom: 5px solid $border-color;
   margin-bottom: 30px;
 
   @include media(md) {
