--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -68,6 +68,7 @@ $black: #202020;
 $gray: #767676;
 $gray-light: #dedede;
 
+$border-color: $line-gray;
 // prettier-ignore
 $font-family-sans-serif: 'whitney ssm a', 'whitney ssm b', Tahoma, Geneva, sans-serif;
 $font-family-serif: 'sentinel ssm a', 'sentinel ssm b', georgia, serif;
