--- a/src/scss/components/_course-list.scss
+++ b/src/scss/components/_course-list.scss
@@ -22,7 +22,7 @@
 
 .course-item {
   &:not(:last-of-type) {
-    border-bottom: 1px solid $line-gray;
+    border-bottom: 1px solid $border-color;
   }
 }
 
