--- a/src/scss/components/_grid-nav.scss
+++ b/src/scss/components/_grid-nav.scss
@@ -15,7 +15,7 @@
   flex-direction: row-reverse;
 
   &:not(:last-of-type) {
-    border-bottom: 1px solid $line-gray;
+    border-bottom: 1px solid $border-color;
   }
 
   @include media(md) {
@@ -32,7 +32,7 @@
 
   @include media-breakpoint-only(md) {
     &:not(:nth-of-type(2n)) {
-      border-right: 1px solid $line-gray;
+      border-right: 1px solid $border-color;
     }
   }
 
@@ -40,7 +40,7 @@
     @include make-col(4);
 
     &:not(:nth-of-type(3n)) {
-      border-right: 1px solid $line-gray;
+      border-right: 1px solid $border-color;
     }
   }
 }
