--- a/src/scss/components/_story-teaser.scss
+++ b/src/scss/components/_story-teaser.scss
@@ -8,7 +8,7 @@
   &.story-teaser--featured {
     display: block;
     margin-bottom: 60px;
-    border-bottom: 1px solid $line-gray;
+    border-bottom: 1px solid $border-color;
     padding-bottom: 60px; // must be list--lg list__item padding
   }
 }
