manage link styles in variables

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -83,3 +83,8 @@ $base-font-size: 16px;
 $base-text-color: $black;
 $base-line-height: 1.5;
 $base-font-family: $font-family-sans-serif;
+// Links
+$link-color: $brand-primary;
+$link-decoration: none;
+$link-hover-color: $brand-primary;
+$link-hover-decoration: underline;
