--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -73,6 +73,7 @@ $border-color: $line-gray;
 // prettier-ignore
 $font-family-sans-serif: 'whitney ssm a', 'whitney ssm b', Tahoma, Geneva, sans-serif;
 $font-family-serif: 'sentinel ssm a', 'sentinel ssm b', georgia, serif;
+$font-family-base: $font-family-sans-serif;
 
 $font-weight-light: 300;
 $font-weight-normal: 400;
