rename base font styles

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,6 +1,6 @@
 .button {
   display: inline-block;
-  font-family: $font-family-sans-serif;
+  font-family: $font-family-base;
   text-align: center;
   padding: 0.75rem 1.5rem;
   font-size: 1rem;
