--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -5,11 +5,11 @@
 }
 
 body {
-  font-family: $base-font-family;
-  line-height: $base-line-height;
-  font-size: $base-font-size;
   color: $black;
   background-color: $warm-gray;
+  font-family: $font-family-base;
+  line-height: $line-height-base;
+  font-size: $font-size-base;
   -webkit-font-smoothing: antialiased;
 }
 
