--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -27,13 +27,13 @@
   appearance: none;
   border: 1px solid $line-gray;
   width: 100%;
-  font-family: $font-family-sans-serif;
   font-size: 16px;
   line-height: 1.5;
   background-color: $warm-gray;
   color: $black;
   padding: 20px;
   border-radius: 0;
+  font-family: $font-family-base;
 
   &:focus {
     background-color: $white;
