--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -69,6 +69,10 @@ $gray: #767676;
 $gray-light: #dedede;
 
 $danger: #e60000;
+
+$body-bg: $white;
+$body-color: $black;
+
 $border-color: $line-gray;
 // prettier-ignore
 $font-family-sans-serif: 'whitney ssm a', 'whitney ssm b', Tahoma, Geneva, sans-serif;
