--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -2,14 +2,14 @@
   display: inline-block;
   font-family: $font-family-base;
   text-align: center;
-  padding: 0.75rem 1.5rem;
-  font-size: 1rem;
-  border-radius: 0;
-  border: 0;
+  border: $btn-border-width solid $btn-border-color;
   cursor: pointer;
   background: none;
-  transition: 0.2s;
-  line-height: 1.5;
+  transition: $btn-transition;
+  padding: $btn-padding-y $btn-padding-x;
+  font-size: $btn-font-size;
+  line-height: $btn-line-height;
+  border-radius: $btn-border-radius;
 
   @include media(md) {
     white-space: nowrap;
@@ -22,7 +22,7 @@
 
   &--disabled,
   &[disabled] {
-    opacity: 0.5;
+    opacity: $btn-disabled-opacity;
     pointer-events: none;
   }
 }
