--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -104,6 +104,12 @@ $input-btn-border-width: $border-width;
 $input-btn-border-color: $border-color;
 $input-btn-border-radius: 0;
 
+$input-btn-padding-y-sm: 0.5rem;
+$input-btn-padding-x-sm: 1rem;
+
+$input-btn-padding-y-lg: 1.5rem;
+$input-btn-padding-x-lg: 1.5rem;
+
 // Buttons
 
 // button size default
@@ -111,6 +117,14 @@ $btn-padding-y: $input-btn-padding-y;
 $btn-padding-x: $input-btn-padding-x;
 $btn-line-height: $input-btn-line-height;
 $btn-font-size: 1rem;
+
+// button size small
+$btn-padding-y-sm: $input-btn-padding-y-sm;
+$btn-padding-x-sm: $input-btn-padding-x-sm;
+
+// button size large
+$btn-padding-y-lg: $input-btn-padding-y-lg;
+$btn-padding-x-lg: $input-btn-padding-x-lg;
 
 // button border styles
 $btn-border-width: $input-btn-border-width;
@@ -129,6 +143,14 @@ $input-padding-y: $input-btn-padding-y;
 $input-padding-x: $input-btn-padding-y;
 $input-line-height: $input-btn-line-height;
 $input-font-size: 1rem;
+
+// input size small
+$input-padding-y-sm: $input-btn-padding-y-sm;
+$input-padding-x-sm: $input-btn-padding-x-sm;
+
+// input size large
+$input-padding-y-lg: $input-btn-padding-y-lg;
+$input-padding-x-lg: $input-btn-padding-x-lg;
 
 $input-bg: $warm-gray;
 $input-disabled-bg: $warm-gray;
