--- a/src/scss/components/_input-group.scss
+++ b/src/scss/components/_input-group.scss
@@ -1,12 +1,15 @@
 .input-group {
   display: flex;
   width: 100%;
+}
 
-  &__field {
-    flex: 1;
-  }
+.input-group__field {
+  flex: 1;
 
-  &__button {
-    flex: 0 1 auto;
+  .form__control {
   }
+}
+
+.input-group__button {
+  flex: 0 1 auto;
 }
