--- a/src/templates/partials/site-search.twig
+++ b/src/templates/partials/site-search.twig
@@ -3,10 +3,10 @@
     <div class="input-group">
       <div class="input-group__field">
         <label for="midd-site-search" class="sr-only">Search the Institute</label>
-        <input type="search" placeholder="Search the Institute" class="site-search__control form__control" id="midd-site-search" required />
+        <input type="search" placeholder="Search the Institute" class="site-search__control form__control form__control--sm" id="midd-site-search" required />
       </div>
       <div class="input-group__button">
-        <button type="submit" class="button site-search__button">
+        <button type="submit" class="button button--sm site-search__button">
           <span class="sr-only">Search</span>
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-search" />
