--- a/src/scss/components/_hero-form.scss
+++ b/src/scss/components/_hero-form.scss
@@ -3,7 +3,6 @@
 }
 
 .hero-form__media {
-
   @include media-breakpoint-down(sm) {
     margin-bottom: 30px;
   }
@@ -11,7 +10,11 @@
 
 .hero-form__content {
   @include media(sm) {
-    background-image: linear-gradient(to bottom, rgba(black, .5), transparent 50%);
+    background-image: linear-gradient(
+      to bottom,
+      rgba(black, 0.5),
+      transparent 50%
+    );
     width: 100%;
     height: 100%;
     position: absolute;
