--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -95,6 +95,10 @@ $link-color: $brand-primary;
 $link-decoration: none;
 $link-hover-color: $brand-primary;
 $link-hover-decoration: underline;
+
+// Paragraphs
+$paragraph-margin-bottom: 0;
+
 // Shared buttons and forms styles
 $input-btn-padding-y: 0.75rem;
 $input-btn-padding-x: 1.5rem;
