--- a/src/templates/partials/icons.twig
+++ b/src/templates/partials/icons.twig
@@ -1,125 +1,93 @@
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="0" height="0" style="position:absolute">
-
-		<symbol id="icon-arrow-backtotop" viewBox="0 0 17 10">
-			<title>icon-arrow-backtotop</title><path d="M.3 7.7L8 .1l7.7 7.7c.5.5.5 1.1 0 1.6s-1.1.5-1.6 0L8 3.3l-6.1 6c-.5.5-1.1.5-1.6 0-.1-.1-.3-.4-.3-.8 0-.3.2-.6.3-.8z" fill-rule="evenodd"></path>
-		</symbol>
-
+	
 		<symbol id="icon-arrow-down" viewBox="0 0 20 12">
 			<title>icon-arrow-mobile-menu-dropdown</title><path d="M10 8L2 0 0 2l10 10L20 2l-2-2z" fill-rule="evenodd"></path>
 		</symbol>
-
+	
 		<symbol id="icon-arrow-left" viewBox="0 0 6 11">
 			<title>icon-arrow-left</title><path d="M4.8 10.7L0 5.9l4.8-4.8c.3-.3.7-.3 1 0 .3.3.3.7 0 1L2 5.9l3.8 3.8c.3.3.3.7 0 1-.1.1-.3.2-.5.2s-.4-.1-.5-.2z" fill-rule="evenodd"></path>
 		</symbol>
-
+	
 		<symbol id="icon-arrow-right" viewBox="0 0 6 11">
 			<title>icon-arrow-right</title><path d="M.7 10.9c-.2 0-.4-.1-.5-.2-.3-.3-.3-.7 0-1L4 5.9.2 2.1c-.3-.3-.3-.7 0-1 .3-.3.7-.3 1 0L6 5.9l-4.8 4.8c-.1.1-.3.2-.5.2z" fill-rule="evenodd"></path>
 		</symbol>
-
+	
 		<symbol id="icon-arrow-up" viewBox="0 0 20 12">
 			<path d="M10 4l-8 8-2-2L10 0l10 10-2 2z" fill-rule="evenodd"></path>
 		</symbol>
-
+	
 		<symbol id="icon-calendar" viewBox="0 0 21 21">
 			<title>icon-calendar</title><path d="M18.6 1.7h-.8c0-.9-.7-1.6-1.6-1.6-.9 0-1.6.7-1.6 1.6H6.5C6.5.8 5.8.1 4.9.1 4 .1 3.2.8 3.2 1.7h-.8C1.1 1.7 0 2.8 0 4.1v13.7c0 1.3 1.1 2.4 2.4 2.4h16.2c1.3 0 2.4-1.1 2.4-2.4V4.1c0-1.3-1.1-2.4-2.4-2.4zM2.8 4.5c0-.5.2-.9.4-1.2 0 .9.7 1.6 1.6 1.6.9 0 1.6-.7 1.6-1.6.3.3.4.7.4 1.2 0 1.1-.9 2-2 2-1.1.1-2-.8-2-2zm8.1 11.9H5V15l2.6-2.2c1-.7 1.4-1.2 1.4-1.8 0-.7-.4-1-1.1-1-.6 0-1 .3-1.6 1.1l-1.2-1c.8-1.1 1.5-1.6 3-1.6 1.7 0 2.7 1 2.7 2.5 0 1.3-.7 2-2.1 3.1l-1.3 1h3.5v1.3zm4.3 0h-1.7v-6.2l-1.4.3-.4-1.4 2.3-.6h1.2v7.9zm1-9.8c-1.1 0-2-.9-2-2 0-.5.2-.9.4-1.2 0 .9.7 1.6 1.6 1.6.9 0 1.6-.7 1.6-1.6.3.3.4.7.4 1.2 0 1.1-.9 2-2 2z" fill-rule="evenodd"></path>
 		</symbol>
-
+	
+		<symbol id="icon-check" viewBox="0 0 19 14">
+			<title>icon-filter-select</title><path d="M7.1 14L0 6.9l2.1-2 5 5L16.9 0 19 2.1z" fill-rule="evenodd"></path>
+		</symbol>
+	
 		<symbol id="icon-compass" viewBox="0 0 18 22">
 			<title>icon-compass</title><path d="M9.4 3.3v-.4c.6-.2 1.1-.7 1.1-1.4C10.5.7 9.9.1 9.1.1c-.8 0-1.4.6-1.4 1.4 0 .7.5 1.2 1.1 1.4v.4c-5 .2-8.8 4.2-8.8 9 0 5 4 9 9 9s9-4 9-9c0-4.8-3.9-8.8-8.6-9zM8.3 1.5c0-.4.3-.7.7-.7.4 0 .7.3.7.7 0 .4-.3.7-.7.7-.4 0-.7-.3-.7-.7zM4.6 17.2h-.2c-.1 0-.2 0-.3-.1-.1-.1-.1-.2 0-.4L7 10.9l3.4 3.4-5.8 2.9zm9.3-9.3L11 13.8l-3.4-3.4 5.9-2.9c.1-.1.3 0 .4.1 0 0 .1.1 0 .3z" fill-rule="evenodd"></path>
 		</symbol>
-
-		<symbol id="icon-degreeprogram-hover" viewBox="0 0 20 20">
-			<title>icon-degreeprogram-hover</title><path d="M10 0C4.5 0 0 4.5 0 10s4.5 10 10 10 10-4.5 10-10S15.5 0 10 0zm-.8 14.7c-.1.1-.3.2-.5.2s-.4-.1-.5-.2c-.3-.3-.3-.7 0-1L12 9.9 8.2 6.1c-.3-.3-.3-.7 0-1 .3-.3.7-.3 1 0L14 9.9l-4.8 4.8z" fill-rule="evenodd"></path>
-		</symbol>
-
+	
 		<symbol id="icon-email" viewBox="0 0 25 17">
 			<title>icon-email</title><g fill-rule="evenodd"><path d="M1 0l11.5 8L24 0z"></path><path d="M0 1v14c0 1.1.9 2 2 2h21c1.1 0 2-.9 2-2V1L12.5 12 0 1z"></path></g>
 		</symbol>
-
+	
 		<symbol id="icon-facebook" viewBox="0 0 20 20">
 			<title>social-facebook</title><path d="M18.9 0H1.1C.5 0 0 .5 0 1.1v17.8c0 .6.5 1.1 1.1 1.1h9.6v-7.7H8.1v-3h2.6V7c0-2.6 1.6-4 3.9-4 1.1 0 2.1.1 2.3.1v2.7h-1.6c-1.3 0-1.5.6-1.5 1.5v1.9h3l-.4 3h-2.6V20h5.1c.6 0 1.1-.5 1.1-1.1V1.1c0-.6-.5-1.1-1.1-1.1z" fill-rule="evenodd"></path>
 		</symbol>
-
-		<symbol id="icon-filter-select" viewBox="0 0 19 14">
-			<title>icon-filter-select</title><path d="M7.1 14L0 6.9l2.1-2 5 5L16.9 0 19 2.1z" fill-rule="evenodd"></path>
-		</symbol>
-
+	
 		<symbol id="icon-googleplus" viewBox="0 0 20 20">
 			<title>social-googleplus</title><path d="M0 0v20h20V0H0zm10.9 13.3c-1.3 1.6-3.6 2.1-5.5 1.5-2-.7-3.4-2.7-3.4-4.8-.1-2.6 2.2-5 4.8-5.1 1.3-.1 2.6.4 3.7 1.3-.4.5-.8.9-1.3 1.3-.9-.5-2-1-3-.6-1.7.5-2.7 2.5-2.1 4.1.5 1.7 2.6 2.7 4.2 1.9.8-.3 1.4-1.1 1.7-1.9H7.1V9.3H12c0 1.4-.2 2.9-1.1 4zm7.1-2.6h-1.5v1.5h-1.4v-1.5h-1.5V9.3h1.5V7.8h1.4v1.5H18v1.4z" fill-rule="evenodd"></path>
 		</symbol>
-
+	
 		<symbol id="icon-hamburger" viewBox="0 0 20 16">
-			<title>icon-hamburger</title><g fill-rule="evenodd"><path d="M0 0h20v2H0zM0 7h20v2H0zM0 14h20v2H0z"></path></g>
+			<title>icon-hamburger</title><path d="M0 0h20v2H0zm0 7h20v2H0zm0 7h20v2H0z" fill-rule="evenodd"></path>
 		</symbol>
-
+	
 		<symbol id="icon-instagram" viewBox="0 0 21 21">
 			<title>social-instagram</title><g fill-rule="evenodd"><path d="M10 2.8c2.7 0 3 0 4 .1 1 0 1.5.2 1.9.3.5.2.8.4 1.1.8.3.3.6.7.7 1.1.2.4.4.9.4 1.9 0 1.1.1 1.4.1 4s0 3-.1 4c0 1-.2 1.5-.3 1.9-.2.5-.4.8-.7 1.1-.3.3-.7.6-1.1.7-.4.1-.9.3-1.9.3-1.1 0-1.4.1-4 .1s-3 0-4-.1c-1 0-1.5-.2-1.9-.3-.6-.1-.9-.3-1.2-.7-.3-.3-.6-.7-.7-1.1-.2-.4-.4-.9-.4-1.9 0-1.1-.1-1.4-.1-4s0-3 .1-4c0-1 .2-1.5.3-1.9.2-.5.4-.8.8-1.1.3-.3.7-.6 1.1-.7.4-.2.9-.4 1.9-.4 1-.1 1.3-.1 4-.1zM10 1c-2.7 0-3.1 0-4.1.1-1.1 0-1.8.2-2.4.5-.7.2-1.3.5-1.8 1.1-.6.5-.9 1.1-1.2 1.7-.2.7-.4 1.4-.4 2.5C0 7.9 0 8.3 0 11c0 2.7 0 3.1.1 4.1 0 1.1.2 1.8.5 2.4.3.7.6 1.2 1.2 1.8.6.6 1.1.9 1.8 1.2.6.2 1.4.4 2.4.5h4c2.7 0 3.1 0 4.1-.1 1.1 0 1.8-.2 2.4-.5.7-.3 1.2-.6 1.8-1.2.6-.6.9-1.1 1.2-1.8.2-.6.4-1.4.5-2.4 0-1.1.1-1.4.1-4.1 0-2.7 0-3.1-.1-4.1 0-1.1-.2-1.8-.5-2.4-.3-.7-.6-1.2-1.2-1.8-.6-.6-1.1-.9-1.8-1.2-.6-.2-1.4-.4-2.4-.5-1 .1-1.4.1-4.1.1z"></path><path d="M10 5.9c-2.8 0-5.1 2.3-5.1 5.1s2.3 5.1 5.1 5.1 5.1-2.3 5.1-5.1-2.3-5.1-5.1-5.1zm0 8.4c-1.8 0-3.3-1.5-3.3-3.3 0-1.8 1.5-3.3 3.3-3.3 1.8 0 3.3 1.5 3.3 3.3 0 1.8-1.5 3.3-3.3 3.3z"></path><circle cx="15.3" cy="5.7" r="1.2"></circle></g>
 		</symbol>
-
+	
 		<symbol id="icon-linkedin" viewBox="0 0 20 20">
-			<title>social-linkedin</title><g fill-rule="evenodd"><path d="M18.5 0h-17C.7 0 0 .6 0 1.4v17.1c0 .9.7 1.5 1.5 1.5h17c.8 0 1.5-.6 1.5-1.4V1.4c0-.8-.7-1.4-1.5-1.4zM6.1 16.7H3v-9h3v9h.1zM4.6 6.5c-1 0-1.7-.7-1.7-1.6 0-.9.7-1.6 1.7-1.6s1.7.7 1.7 1.6c0 .9-.7 1.6-1.7 1.6zM17 16.7h-3v-4.8c0-1.2-.4-2-1.5-2-.8 0-1.3.6-1.5 1.1-.1.2-.1.5-.1.7v5h-3v-9h3V9c.4-.6 1.1-1.5 2.7-1.5 2 0 3.5 1.3 3.5 4.1v5.1H17zM10.8 9c-.1 0-.1 0 0 0z"></path></g>
+			<title>social-linkedin</title><path d="M18.5 0h-17C.7 0 0 .6 0 1.4v17.1c0 .9.7 1.5 1.5 1.5h17c.8 0 1.5-.6 1.5-1.4V1.4c0-.8-.7-1.4-1.5-1.4zM6.1 16.7H3v-9h3v9h.1zM4.6 6.5c-1 0-1.7-.7-1.7-1.6 0-.9.7-1.6 1.7-1.6s1.7.7 1.7 1.6c0 .9-.7 1.6-1.7 1.6zM17 16.7h-3v-4.8c0-1.2-.4-2-1.5-2-.8 0-1.3.6-1.5 1.1-.1.2-.1.5-.1.7v5h-3v-9h3V9c.4-.6 1.1-1.5 2.7-1.5 2 0 3.5 1.3 3.5 4.1v5.1H17zM10.8 9c-.1 0-.1 0 0 0z" fill-rule="evenodd"></path>
 		</symbol>
-
+	
 		<symbol id="icon-map" viewBox="0 0 17 20">
 			<title>icon-map</title><path d="M8.3 0C3.7 0 0 3.7 0 8.3c0 2.3 1 4.5 2.6 6L8.3 20l5.9-5.9c1.5-1.5 2.4-3.5 2.4-5.8 0-4.6-3.7-8.3-8.3-8.3zm0 11.9c-2 0-3.6-1.6-3.6-3.6s1.6-3.6 3.6-3.6 3.6 1.6 3.6 3.6-1.6 3.6-3.6 3.6z" fill-rule="evenodd"></path>
 		</symbol>
-
-		<symbol id="icon-minus-accordion" viewBox="0 0 16 2">
+	
+		<symbol id="icon-minus" viewBox="0 0 16 2">
 			<title>icon-minus-accordion</title><path d="M0 2V0h16v2z" fill-rule="evenodd"></path>
 		</symbol>
-
+	
 		<symbol id="icon-play" viewBox="0 0 6 8">
 			<title>icon-play</title><path d="M6 4L0 8V0z" fill-rule="evenodd"></path>
 		</symbol>
-
+	
 		<symbol id="icon-plus" viewBox="0 0 16 16">
 			<title>icon-plus</title><path d="M9 7V0H7v7H0v2h7v7h2V9h7V7H9z" fill-rule="evenodd"></path>
 		</symbol>
-
-		<symbol id="icon-plus-accordion" viewBox="0 0 16 16">
-			<title>icon-plus-accordion</title><path d="M16 7H9V0H7v7H0v2h7v7h2V9h7z" fill-rule="evenodd"></path>
-		</symbol>
-
+	
 		<symbol id="icon-quotemark" viewBox="0 0 14 10">
 			<title>icon-quotemark</title><path d="M0 6.6C0 3.9 1.5 1.8 5.4 0L6 1.2C3.2 2.6 2 3.9 1.8 5.5l.2.1c.3-.2.6-.3.9-.3 1 0 1.8.8 1.8 2s-.9 2.2-2.1 2.2C.9 9.5 0 8.3 0 6.6zm7 0C7 3.9 8.5 1.8 12.5 0l.6 1.2c-2.9 1.4-4 2.7-4.2 4.3l.1.1c.3-.2.6-.3.9-.3 1 0 1.8.8 1.8 2s-.9 2.2-2.2 2.2C8 9.5 7 8.3 7 6.6z" fill-rule="evenodd"></path>
 		</symbol>
-
+	
 		<symbol id="icon-search" viewBox="0 0 10 10">
 			<title>icon-search</title><path d="M9.8 8.9L8 7.1c.6-.7.9-1.7.9-2.7C8.9 2 6.9 0 4.5 0 2 0 0 2 0 4.5S2 9 4.5 9c1 0 2-.4 2.7-.9l1.7 1.7c.1 0 .3.1.5.1s.3-.1.4-.2c.2-.2.2-.6 0-.8zM1.2 4.5c0-1.8 1.5-3.3 3.3-3.3 1.8 0 3.3 1.5 3.3 3.3 0 1.8-1.5 3.2-3.3 3.2-1.8 0-3.3-1.4-3.3-3.2z" fill-rule="evenodd"></path>
 		</symbol>
-
-		<symbol id="icon-search-lg" viewBox="0 0 20 20">
-			<path d="M19.6 17.8L16 14.2c1.2-1.4 1.8-3.4 1.8-5.4C17.8 4 13.8 0 9 0 4 0 0 4 0 9s4 9 9 9c2 0 4-.8 5.4-1.8l3.4 3.4c.2 0 .6.2 1 .2s.6-.2.8-.4c.4-.4.4-1.2 0-1.6zM2.4 9c0-3.6 3-6.6 6.6-6.6 3.6 0 6.6 3 6.6 6.6 0 3.6-3 6.4-6.6 6.4-3.6 0-6.6-2.8-6.6-6.4z" fill-rule="evenodd"></path>
-		</symbol>
-
-		<symbol id="icon-search-md" viewBox="0 0 16 16">
-			<path d="M15.68 14.24l-2.88-2.88c.96-1.12 1.44-2.72 1.44-4.32C14.24 3.2 11.04 0 7.2 0 3.2 0 0 3.2 0 7.2s3.2 7.2 7.2 7.2c1.6 0 3.2-.64 4.32-1.44l2.72 2.72c.16 0 .48.16.8.16.32 0 .48-.16.64-.32.32-.32.32-.96 0-1.28zM1.92 7.2c0-2.88 2.4-5.28 5.28-5.28 2.88 0 5.28 2.4 5.28 5.28 0 2.88-2.4 5.12-5.28 5.12-2.88 0-5.28-2.24-5.28-5.12z" fill-rule="evenodd"></path>
-		</symbol>
-
+	
 		<symbol id="icon-twitter" viewBox="0 0 25 20">
 			<title>social-twitter</title><path d="M24.6 2.4c-.9.4-1.9.7-2.9.8 1-.6 1.8-1.6 2.2-2.8-1 .6-2.1 1-3.2 1.2C19.8.6 18.5 0 17 0c-2.8 0-5 2.3-5 5 0 .4 0 .8.1 1.2C7.9 6 4.2 4 1.7.9c-.4.8-.7 1.6-.7 2.6 0 1.8.9 3.3 2.2 4.2-.8-.1-1.5-.3-2.2-.7v.1c0 2.4 1.7 4.5 4.1 5-.4.1-.9.2-1.3.2-.3 0-.6 0-.9-.1.6 2 2.5 3.5 4.7 3.5-1.7 1.4-3.9 2.2-6.3 2.2-.4 0-.8 0-1.2-.1C2.2 19.2 4.9 20 7.7 20c9.3 0 14.4-7.7 14.4-14.4v-.7c1-.6 1.8-1.5 2.5-2.5z" fill-rule="evenodd"></path>
 		</symbol>
-
-		<symbol id="icon-widget-accordion" viewBox="0 0 19 11">
-			<title>icon-widget-accordion</title><path d="M9.3 10.9l-9-9C-.1 1.5-.1.9.3.5c.4-.4 1-.4 1.4 0l7.6 7.6L16.9.5c.4-.4 1-.4 1.4 0 .4.4.4 1 0 1.4l-9 9z" fill-rule="evenodd"></path>
-		</symbol>
-
+	
 		<symbol id="icon-widget-updown" viewBox="0 0 14 24">
-			<title>icon-widget-updown</title><g transform="translate(-1)" fill-rule="evenodd"><path d="M8 24l-6.8-6.8c-.3-.3-.3-.7 0-1 .3-.3.7-.3 1 0L8 21.9l5.8-5.7c.3-.3.7-.3 1 0 .3.3.3.7 0 1L8 24zM8 0l6.8 6.8c.3.3.3.7 0 1-.3.3-.7.3-1 0L8 2.1 2.2 7.8c-.3.3-.7.3-1 0-.3-.3-.3-.7 0-1L8 0z"></path></g>
+			<title>icon-widget-updown</title><path d="M7 24L.2 17.2c-.3-.3-.3-.7 0-1 .3-.3.7-.3 1 0L7 21.9l5.8-5.7c.3-.3.7-.3 1 0 .3.3.3.7 0 1L7 24zM7 0l6.8 6.8c.3.3.3.7 0 1-.3.3-.7.3-1 0L7 2.1 1.2 7.8c-.3.3-.7.3-1 0-.3-.3-.3-.7 0-1L7 0z" fill-rule="evenodd"></path>
 		</symbol>
-
+	
 		<symbol id="icon-x" viewBox="0 0 16 16">
-			<title>icon-x</title><path d="M8 6.586l-4.95-4.95L1.636 3.05 6.586 8l-4.95 4.95 1.414 1.414L8 9.414l4.95 4.95 1.414-1.414L9.414 8l4.95-4.95-1.414-1.414L8 6.586z" fill-rule="nonzero" fill="currentColor"></path>
+			<title>icon-x</title><path d="M8 6.586l-4.95-4.95L1.636 3.05 6.586 8l-4.95 4.95 1.414 1.414L8 9.414l4.95 4.95 1.414-1.414L9.414 8l4.95-4.95-1.414-1.414L8 6.586z"></path>
 		</symbol>
-
-		<symbol id="icon-x-circle" viewBox="0 0 10 10">
-			<title>icon-x-circle</title><path d="M6.7 5.5l3.1-3.1c.3-.3.3-.8 0-1.2-.3-.4-.8-.3-1.2 0L5.5 4.3 2.4 1.2c-.3-.3-.8-.3-1.2 0-.4.3-.3.8 0 1.2l3.1 3.1-3.1 3.1c-.3.3-.3.8 0 1.2.2.1.4.2.6.2.2 0 .4-.1.6-.2l3.1-3.1 3.1 3.1c.1.1.4.2.6.2.2 0 .4-.1.6-.2.3-.3.3-.8 0-1.2L6.7 5.5z" fill-rule="evenodd"></path>
-		</symbol>
-
-		<symbol id="icon-x-hamburger" viewBox="0 0 16 16">
-			<title>icon-x-hamburger</title><path d="M14.1 0L7.8 6.4 1.4 0 0 1.4l6.4 6.4L0 14.1l1.4 1.5 6.4-6.4 6.3 6.4 1.5-1.5-6.4-6.3 6.4-6.4z" fill-rule="evenodd"></path>
-		</symbol>
-
+	
 		<symbol id="icon-youtube" viewBox="0 0 29 20">
 			<title>social-youtube</title><path d="M28.2 4.3s-.3-2-1.1-2.8C26 .4 24.8.4 24.3.3 20.2 0 14.2 0 14.2 0s-6 0-9.9.3c-.6.1-1.8.1-2.9 1.2C.6 2.4.3 4.3.3 4.3S0 6.6 0 8.9v2.2c0 2.3.3 4.6.3 4.6s.3 2 1.1 2.8c1.1 1.1 2.5 1.1 3.1 1.2 2.3.2 9.7.3 9.7.3s6 0 10-.3c.6-.1 1.8-.1 2.8-1.2.9-.9 1.1-2.8 1.1-2.8s.3-2.3.3-4.6V8.9c0-2.3-.2-4.6-.2-4.6zm-16.9 9.4v-8l7.7 4-7.7 4z" fill-rule="evenodd"></path>
 		</symbol>
