fix body bg color

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -70,7 +70,7 @@ $gray-light: #dedede;
 
 $danger: #e60000;
 
-$body-bg: $white;
+$body-bg: $warm-gray;
 $body-color: $black;
 
 $border-width: 1px;
