--- a/src/scss/components/_site-header.scss
+++ b/src/scss/components/_site-header.scss
@@ -48,7 +48,7 @@
 // TODO: change to svg
 .site-header__logo {
   display: block;
-  background-image: url('/images/miis-logo-left.png');
+  background-image: url('/images/miis-logo.svg');
   background-repeat: no-repeat;
   background-position: center;
   width: 213px;
